# Stripe-price

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  tonconnect-manifest.json
scripts/: entrypoint.sh
src/: __main__.py  dto.py
src/adapters/: stripe_payment_adapter.py
src/controllers/: stripe_payments_controller.py
src/controllers/middleware/: log_middleware.py
src/main/: depends.py
src/third_parties/: selenium_driver_factory.py
src/usecases/: get_sripe_payment_data_from_url_use_case.py
